# tsvalid

./: .gitignore  Makefile  README.md  setup.cfg  tox.ini
.github/workflows/: qc.yml
docs/: checks.html  cli.html  cli_usage.html  documentation.html  examples.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  sphinx_documentation.html  tsvalid.html
docs/_sources/: cli.rst.txt  cli_usage.rst.txt  documentation.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  sphinx_documentation.rst.txt  tsvalid.rst.txt
sphinx/: checks.csv  checks.rst  cli_usage.rst  conf.py  examples.rst  index.rst  installation.rst  tsvalid.rst
tests/: README.md  __init__.py  test_cli.py  test_validate.py  tests.sh
tests/data/: test_all_correct.tsv  test_all_wrong.tsv  test_empty_column.tsv  test_header_section.tsv  test_line_ending.tsv  test_missing_columns.tsv  test_non_empty_last_row.tsv  test_not_utf8.tsv  test_row_whitespace.tsv  test_utf8_bad_char.tsv
tsvalid/: __init__.py  __main__.py  checks.py  cli.py  constants.py  io.py  tsvalid.py  util.py
