##########################
# Setup.py Configuration #
##########################

[metadata]
name = tsvalid
version = 0.0.1
description = Validation of TSV files
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/ontodev/tsvalid
download_url = https://github.com/ontodev/tsvalid/releases
project_urls =
    Bug Tracker = https://github.com/ontodev/tsvalid/issues
    Source Code = https://github.com/ontodev/tsvalid/
    Documentation = https://ontodev.github.io/tsvalid

# Author information
author = Nicolas Matentzoglu
author_email = nicolas.matentzoglu@gmail.com
maintainer = James Overton
maintainer_email = james@overton.ca

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    TSV
    Spreadsheet
    Tables
    Linter
    Validation

[options]
install_requires =
    click
    validators

# Random options
zip_safe = false
include_package_data = True

python_requires = >=3.6

# Where is my code
packages = find:
#package_dir =
#    = .

#[options.packages.find]
#where = .

[options.extras_require]
test =
    pytest
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx-click

[options.entry_points]
console_scripts =
    tsvalid = tsvalid.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = tsvalid
omit =
    tsvalid/__main__.py
    tsvalid/cli.py
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    tsvalid
    .tox/*/lib/python*/site-packages/tsvalid

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__


#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    E501 # Line length
    W503 # Line break before binary operator (flake8 is wrong)
    S408 # don't worry about unsafe xml
    S318 # don't worry about unsafe xml
    S310 # TODO remove this later and switch to using requests
#exclude =
#    tsvalid/test.py

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
